--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Passion+One&display=swap');
+
+:root{
+  --orange: #ffb500;
+  --purple: #ea00ff;
+  --black: #000000;
+  --font1: "Comfortaa", sans-serif;
+  --font2: "Passion One", sans-serif;
+}
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -7,6 +17,190 @@
   word-break: break-word; /* to stop overflow due to long words */
 }
 
+/* nav starts */
+nav{
+  height: 3em;
+  background: white;
+  width: 100%;
+  position: fixed;
+  top:0;
+  left:0;
+  margin:0;
+  z-index:3;
+}
+
+#nav-logo{
+  height: 100%;
+  margin-left: 1em;
+  float:left;
+}
+
+#nav-logo img{
+  height: 100%;
+}
+
+#nav-container{
+  float: right;
+  z-index: 5;
+  height: 100%;
+}
+
+.nav-links{
+  height: 100%;
+  float: right;
+  z-index: 5;
+}
+
+/* hamburger menu  */
+#menu-bar{
+  background-color: transparent;
+  width: 3em;
+  height: 100%;
+  padding-left:0.6em;
+  padding-right: 0.6em;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column  ;
+  justify-content: center;
+  z-index: 5;
+  position: absolute;
+  top:0;
+  right:0;
+
+}
+
+.bar{
+  height: 5px;
+  width: 100%;
+  background-color: var(--orange);
+  display:block;
+  border-radius: 5px;
+  margin: 0;
+  transition: 0.3s ease;
+}
+
+#bar1{
+  transform: translateY(-4px);
+}
+
+#bar3{
+  transform:translateY(4px);
+}
+
+.nav li a{
+  color: black ;
+  text-decoration: none;
+}
+
+.nav li a:hover{
+  font-weight: bold;
+}
+
+.nav li{
+  list-style: none;
+  padding: 25px 0;
+  font-size: 1.5em;
+}
+
+.nav{
+  padding:0;
+  margin: 0 20px;
+  transition: 0.3s ease;
+  display: none;
+  position: relative;
+  z-index:5;
+}
+
+.menu-bg{
+  width: 0;
+  height: 0;
+  background-color: var(--orange);
+  transition: 0.3s ease;
+  z-index:4;
+  float: right;
+}
+
+.change-bg{
+  width: 550px;
+  height: 540px;
+  border-radius: 50%;
+  transform: translate(60%, -60%);
+  z-index:3;
+
+  
+}
+
+.change .bar{
+  background-color: white;
+}
+
+.change #bar1{
+  transform: translateY(4px) rotateZ(45deg);
+}
+
+.change #bar3{
+  transform: translateY(-4px) rotateZ(-45deg);
+}
+
+.change #bar2{
+  display:none;
+}
+
+.change-nav{
+  display: block;
+}
+/* navbar ends */
+
+body{
+  margin-top:3em;
+}
+
+@media only screen and (min-width: 45em) {
+  /* Style adjustments for viewports that meet the condition */
+  #menu-bar, #menu-bg{
+    display: none;
+  }
+
+  #nav{
+    display: block;
+  }
+
+  #nav li{
+    float: left;
+    text-align: center;
+    margin: 0em 1em;
+    padding: 15px 0;
+    vertical-align: middle;
+  }
+
+  #heading h1{
+    font-size: 3rem;
+  }
+
+  #Services{
+    width: 80%;
+    min-width: 40em;
+    display: flex;
+    flex-wrap: wrap;
+    position:relative;
+    margin: auto;
+  }
+  .services-card{
+    width: 16em;
+  }
+
+  #our-clients{
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #Contact{
+    margin: auto;
+    width: 20em;
+    /* justify-content: center;
+    align-items: center; */
+  }
+}
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
 /* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
