--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ nav{
 
 .nav li{
   list-style: none;
-  padding: 25px 0;
+  padding: 8px 0;
   font-size: 1.5em;
 }
 
@@ -122,12 +122,10 @@ nav{
 
 .change-bg{
   width: 550px;
-  height: 540px;
+  height: 550px;
   border-radius: 50%;
-  transform: translate(60%, -60%);
-  z-index:3;
-
-  
+  transform: translate(60%, -50%);
+  z-index:3;  
 }
 
 .change .bar{
@@ -153,7 +151,89 @@ nav{
 
 body{
   margin-top:3em;
+  background-color: #a8cda6;
 }
+
+header{
+  background: #a8cda6 url("img/header-background-colors.jpg") no-repeat fixed center;
+  color: white;
+  text-align: center;
+  text-shadow: 2px 2px black;
+  min-height: 80vh;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#comp-desc{
+  font-size: 1em;
+}
+
+main{
+  width: 90%;
+  margin: auto;
+  text-align: justify;
+  text-align-last: center;
+}
+
+#main-text{
+  padding: 2em;
+}
+
+#main-image>img{
+  width: 100%;
+  margin: auto;
+  display: block;
+  border-radius: 5px;
+  background-color: white;
+  padding: 2em;
+}
+
+h2{
+  font-size: 1.3em;
+  display: inline;
+}
+
+h3{
+  display:inline;
+}
+
+/*Footer*/
+#sm-handles{
+  display: flex;
+}
+
+.sm-icon{
+  height: 40px;
+  width: 40px;
+  margin: 0 5px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sm-icon>img{
+  max-height: 60%;
+  margin:auto;
+}
+
+.fb:hover{
+  border: #3b5998 1px solid;
+}
+
+.insta:hover{
+  border: #dd2a7b 1px solid;
+}
+
+.twitter:hover{
+  border: #00acee 1px solid;
+}
+/*Footer End*/
+
+
 
 @media only screen and (min-width: 45em) {
   /* Style adjustments for viewports that meet the condition */
@@ -173,32 +253,23 @@ body{
     vertical-align: middle;
   }
 
-  #heading h1{
-    font-size: 3rem;
-  }
-
-  #Services{
-    width: 80%;
-    min-width: 40em;
+  main{
     display: flex;
-    flex-wrap: wrap;
-    position:relative;
-    margin: auto;
-  }
-  .services-card{
-    width: 16em;
   }
 
-  #our-clients{
-    flex-direction: row;
+  #main-text{
+    width: 50%;
+  }
+
+  #main-image{
+    width: 50%;
+    display: flex;
+    align-items: center;
     justify-content: center;
   }
 
-  #Contact{
-    margin: auto;
-    width: 20em;
-    /* justify-content: center;
-    align-items: center; */
+  #main-image>img{
+    width: 70%;
   }
 }
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
