--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ nav{
 .bar{
   height: 5px;
   width: 100%;
-  background-color: var(--orange);
+  background-color: #a8cda6;
   display:block;
   border-radius: 5px;
   margin: 0;
@@ -114,7 +114,7 @@ nav{
 .menu-bg{
   width: 0;
   height: 0;
-  background-color: var(--orange);
+  background-color: #ffb500;
   transition: 0.3s ease;
   z-index:4;
   float: right;
@@ -201,8 +201,62 @@ h3{
 }
 
 /*Footer*/
+
+footer{
+  font-size: 1.4em;
+  padding: 1em;
+  margin: auto;
+}
+
+#form{
+  display: block;
+  text-align: center;
+  margin: auto;
+}
+
+form{
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+label{
+  display: inline-block;
+  min-width: 150px;
+}
+
+input{
+  margin-left: 1em;
+}
+
+#address{
+  visibility: hidden;
+  height: 0;
+  width: 0;
+}
+
+#submit-div{
+text-align: center;
+}
+
+#submit{
+  display: inline-block;
+  border-radius: 5px;
+  padding: 0.2em;
+  margin:0;
+}
+
+#details{
+  text-align: center;
+}
+
+#details>*{
+  margin-top: 1em;
+}
+
 #sm-handles{
-  display: flex;
+  display: inline-block;
 }
 
 .sm-icon{
@@ -210,9 +264,7 @@ h3{
   width: 40px;
   margin: 0 5px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: inline-block;
 }
 
 .sm-icon>img{
@@ -233,6 +285,9 @@ h3{
 }
 /*Footer End*/
 
+h5{
+  text-align: center;
+}
 
 
 @media only screen and (min-width: 45em) {
@@ -270,6 +325,20 @@ h3{
 
   #main-image>img{
     width: 70%;
+  }
+
+  footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  footer>#form{
+    width: 50%;
+  }
+
+  footer>#details{
+    width: 50%;
   }
 }
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
